--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "fa": "^1.0.1",
+    "fortawesome": "^0.0.1-security",
     "framer-motion": "^11.18.0",
+    "monaco-editor": "^0.52.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-monaco-editor": "^0.56.2",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.7.1"
   },
